--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="tabheader">
                     <h3>Виберіть стиль харчування</h3>
                     <div class="tabheader__items">
-                        <div class="tabheader__item tabheader__item_active">Фитнес</div>
+                        <div class="tabheader__item tabheader__item_active">Фітнес</div>
                         <div class="tabheader__item">Преміум</div>
                         <div class="tabheader__item">Пісне</div>
                         <div class="tabheader__item">Збалансоване</div>
@@ -95,7 +95,7 @@
                 <div class="offer__advantages-text">
                     Готування будинку займає багато сил, часу та нервів. Ми привозимо їжу відразу на цілий день, і ти можеш діяти так, як тобі зручно, не підлаштовуючись ні під кого і впевнений як продукт!
                 </div>
-                <h2>Правильный рацион</h2>
+                <h2>Правильний раціон</h2>
                 <div class="offer__advantages-text">
                     Ми розробили спеціальне меню, де враховано всі нюанси правильного харчування, від балансу БЖУ до їхнього приготування та дроблення раціону.
                 </div>
@@ -194,8 +194,8 @@
         <div class="container">
             <div class="title">Замовляй пробний день зараз!</div>
             <form action="#" class="order__form">
-                <input required placeholder="Ваше имя" name="name" type="text" class="order__input">
-                <input required placeholder="Ваш номер телефона" name="phone" type="phone" class="order__input">
+                <input required placeholder="Ваше ім'я" name="name" type="text" class="order__input">
+                <input required placeholder="Ваш номер телефону" name="phone" type="phone" class="order__input">
                 <img src="icons/right.svg" alt="right">
                 <button class="btn btn_dark btn_min">Передзвонити мені</button>
             </form>
